# conflict-resolution-bot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy_to_fly.yml
frontend/: fly.toml  package-lock.json  package.json
frontend/content/guidelines/: conversation.md  technical.md
frontend/src/: App.tsx  index.css  types.ts
frontend/src/utils/: markdownReader.ts
src/conflict_resolution_bot/: ai_input.py  app.py  evaluate.py  hello.py  knowledge.py  main.py  objective.py  psychology.py  stakeholders.py  streaming.py
src/conflict_resolution_bot/data/: transcript.txt
