[project]
name = "conflict-resolution-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Jamie",email = "jamiejmartin2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm (>=1.61.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
