[project]
name = "conflict-resolution-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Jamie",email = "jamiejmartin2@gmail.com"}
]

packages = [
  { include = "conflict_resolution_bot" }
]

readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "litellm (>=1.60.2,<2.0.0)",
    "llama-index (>=0.12.17,<0.13.0)",
    "llama-index-llms-gemini (>=0.4.10,<0.5.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
